Pages now redirect

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Game</title>
+		<title>Hangman</title>
 	</head>
 	<body>
 		{{#if logged_in}}
-			<a href="/users/sign-out" id="sign-out">Sign Out ({{this.username}})</a> | <a href="/scores">RPS</a> | <a href="/scores/hangman">Hangman</a> | <a href="/scores/quiz">Quiz</a>
+			<a href="/users/sign-out" id="sign-out">Sign Out ({{this.username}})</a> | <a href="/scores/hangman">Hangman</a>
 
 			<p class="clear"><strong>logged_in:</strong> {{logged_in}} |
 			<strong>user_email:</strong> {{user_email}} |
@@ -20,7 +20,7 @@
 
 		{{{ body }}}
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
-		<script src="/assets/js/logic.js"></script>
+		<script src="/assets/javascript/logic.js"></script>
 	</body>
 
 </html>
