--- a/views/users/sign_in.handlebars
+++ b/views/users/sign_in.handlebars
@@ -1,13 +1,10 @@
-<h1>Registration</h1>
-<form class="create-update-form" action="/users/create" method="POST">
-  <div class="form-group">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username">
-  </div>
+<!-- this is the sign_in.handlebars file inside the users folder of the views folder
+views/users/sign_in.handlebars -->
+<form class="create-update-form" action="/users/login" method="POST">
 
   <div class="form-group">
-    <label for="email">Email:</label>
-    <input type="text" id="email" name="email">
+    <label for="em">Email:</label>
+    <input type="text" id="em" name="email">
   </div>
 
   <div class="form-group">
@@ -15,5 +12,5 @@
     <input type="password" id="pass" name="password">
   </div>
 
-  <button type="submit">Sign Up!</button>
+  <button type="submit">Sign In</button>
 </form>
