--- a/views/scores/index.handlebars
+++ b/views/scores/index.handlebars
@@ -1,9 +1,5 @@
 {{#if logged_in}}
-	{{> game}}
+	{{{body}}}
 {{/if}}
 
-<div>	
-	{{#each scores}}
-		<p>Score: {{total_score}} by User: {{user_id}}</p>
-	{{/each}}
-</div>
+<div>
