Game resets after guessing correctly

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,11 +48,11 @@
 
       </div>
 
-      <div class="scores">
+      {{!--<div class="scores">
         <a class="btn btn-primary btn-lg" id="score" href="#" role="button">Display Highscore</a>
         <br><br>
         <div id="highScore">Highscore: </div>
-      </div>
+      </div>--}}
 
     </div>
 
